2010-07-04  0.29_03  H.Merijn Brand

    * Remove leftover debug. Causes fails

2010-07-02  0.29_02  H.Merijn Brand

    * More work to keep in sync with DBI development (Jens)
    * Better diagnostics for missing modules
    * More spell-check fixes
    * Tests for ChopBlanks (now fixed in DBD::File)
    * Tests changed to accept old and new DBI
    * Statement handle attributes handled in new DBD::File

2010-06-11  0.29_01  H.Merijn Brand

    * Prepare for DBD::File-0.39 (DBI-1.612+)
      Should still work with older DBI versions
    * Documentation updates (style, consistency, spell-checking)
    * Test folder cleanup
    * More tests for insert
    * Tested RT#58039

2010-05-03  0.29  H.Merijn Brand

    * Fix git URL in META.yml
    * Add empty CLONE method to prevent warning when cloning threads
    * Minimum perl 5.8.1
    * Minimum Text::CSV_XS 0.71
    * Support for f_encoding (requires DBI-1.611)
    * Documentation updates

2010-03-16  0.28  H.Merijn Brand

    * Remove t/00_minimumversion.t from distribution
    * Dropped YAML spec to 1.0
    * Sync up with SQL::Statement 1.25
      NOTE: Internals of both modules changed. They will change again for
            SQL::Statement 2.0

2010-02-17  0.27  H.Merijn Brand

    * Upped copyright to 2010
    * Doc-fix typo in link (Detlef Pilzecker)
    * Doc-fix small typo's

2009-11-10  0.26  H.Merijn Brand

    * Adjustments for windows (RT#50544)
    * Mark all non-\w chars illegal in field and table names
    * Fix field types after execute (RT#51090, vgdoqd)
    * Fix for NULL joins. Requires SQL::Statement 1.23 (RT#43010, JBAZIK)

2009-10-15  0.25  H.Merijn Brand

    * Raised minimum perl version to 5.005_03
    * Requires Text::CSV_XS 0.43 (needs eof () method and
      error_diag ()) (RT#33764)
    * Code cleanup (perlcritic, style, layout)
    * Implemented f_ext
    * Implemented f_schema (in DBD::File)
    * Split csv handles for input (no eol default) and
      output (default "\r\n") (RT#33767)